# dora-pydantic-arrow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: dora_pydantic_arrow_spec.md
pyarrow/: __init__.py
pydantic/: __init__.py
src/dora_pydantic_arrow/: __init__.py  batch.py  config.py  conversion.py  errors.py  exceptions.py  main.py  schema.py
tests/: test_dora_pydantic_arrow.py
tests/integration/: dataflow.yml  model.py  receiver.py  sender.py
tests/unit/: test_conversion.py
