[project]
name = "dora-pydantic-arrow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "takumi-nishimura", email = "clp13218@nitech.jp" }
]
requires-python = ">=3.12.4"
dependencies = [
    "pyarrow>=15",
    "pydantic>=2",
]

[project.scripts]
dora-pydantic-arrow = "dora_pydantic_arrow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "uuid-utils>=0.11.1",
]
